--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,12 @@ input {
     cursor: pointer;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0px;
     padding: 0px;
     font-weight: normal;
@@ -99,13 +104,17 @@ button:hover {
 
 #stats {
     position: fixed;
-    bottom: 40px;
-    left: 35px;
-    color: #0a0;
-    font-size: 85%;
-    padding: 5px;
-    background: rgba(255, 255, 255, 0.5);
+    bottom: 30%;
+    right: 35px;
+    color: rgb(0, 0, 0);
+    font-size: 135%;
+    padding: 12px;
+    border: 3px solid black;   
+    background: rgba(172, 176, 255, 0.5);
     border-radius: 5px;
+}
+#stats p {
+    color: #000000;
 }
 
 a {
